--- a/ray_tracing/CMakeLists.txt
+++ b/ray_tracing/CMakeLists.txt
@@ -3,4 +3,4 @@ project(ray_tracing)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(ray_tracing main.cpp Vec3.cpp Vec3.h Colorf.cpp Colorf.h Ray.cpp Ray.h)
+add_executable(ray_tracing main.cpp Vec3.cpp Vec3.h Colorf.cpp Colorf.h Ray.cpp Ray.h Hittable.h Sphere.cpp Sphere.h)
